err/nacelle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nacelle'...
Listing './lib/python3.5/site-packages/nacelle/conf'...
Listing './lib/python3.5/site-packages/nacelle/contrib'...
Listing './lib/python3.5/site-packages/nacelle/contrib/lockdown'...
Listing './lib/python3.5/site-packages/nacelle/contrib/mail'...
Listing './lib/python3.5/site-packages/nacelle/core'...
Listing './lib/python3.5/site-packages/nacelle/core/sessions'...
Listing './lib/python3.5/site-packages/nacelle/core/template'...
Listing './lib/python3.5/site-packages/nacelle/core/utils'...
Compiling './lib/python3.5/site-packages/nacelle/core/utils/exceptions.py'...
***   File "./lib/python3.5/site-packages/nacelle/core/utils/exceptions.py", line 26
    except exception_to_check, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nacelle/test'...
Compiling './lib/python3.5/site-packages/nacelle/test/environ.py'...
***   File "./lib/python3.5/site-packages/nacelle/test/environ.py", line 22
    print "ERROR: Can't find appengine SDK on your PATH"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nacelle-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
